Fix TOC spacing issue

--- a/src/components/Chapter.module.scss
+++ b/src/components/Chapter.module.scss
@@ -319,10 +319,14 @@
     padding-top: 1.5rem;
     position: sticky;
     top: 4rem;
-    grid-row: 1 / 6;
+    grid-row: 1 / 2;
     grid-column: 4/6;
   }
   @include bp(l){
     grid-column: 5/6;
   }
+}
+
+.toc-container-inner {
+  position: absolute;
 }
